
[TestLexLifetimeTokens/SingleLifetime - 1]
[]*parser.Token{
    &parser.Token{
        Span: 1:1-1:3,
        Type: 43,
        Value: "a",
    },
}
---

[TestLexLifetimeTokens/MultipleLifetimes - 1]
[]*parser.Token{
    &parser.Token{
        Span: 1:1-1:3,
        Type: 43,
        Value: "a",
    },
    &parser.Token{
        Span: 1:4-1:11,
        Type: 43,
        Value: "static",
    },
    &parser.Token{
        Span: 1:12-1:15,
        Type: 43,
        Value: "b1",
    },
}
---

[TestLexLifetimeTokens/LifetimeInTypeParameterList - 1]
[]*parser.Token{
    &parser.Token{
        Span: 1:1-1:2,
        Type: 53,
        Value: "<",
    },
    &parser.Token{
        Span: 1:2-1:4,
        Type: 43,
        Value: "a",
    },
    &parser.Token{
        Span: 1:4-1:5,
        Type: 17,
        Value: ",",
    },
    &parser.Token{
        Span: 1:6-1:8,
        Type: 43,
        Value: "b",
    },
    &parser.Token{
        Span: 1:8-1:9,
        Type: 17,
        Value: ",",
    },
    &parser.Token{
        Span: 1:10-1:11,
        Type: 41,
        Value: "T",
    },
    &parser.Token{
        Span: 1:11-1:12,
        Type: 39,
        Value: ">",
    },
}
---

[TestLexLifetimeTokens/LifetimeAdjacentToType - 1]
[]*parser.Token{
    &parser.Token{
        Span: 1:1-1:4,
        Type: 59,
        Value: "mut",
    },
    &parser.Token{
        Span: 1:5-1:7,
        Type: 43,
        Value: "a",
    },
    &parser.Token{
        Span: 1:8-1:13,
        Type: 41,
        Value: "Point",
    },
}
---

[TestLexLifetimeTokens/LifetimeUnionInsideParens - 1]
[]*parser.Token{
    &parser.Token{
        Span: 1:1-1:2,
        Type: 68,
        Value: "(",
    },
    &parser.Token{
        Span: 1:2-1:4,
        Type: 43,
        Value: "a",
    },
    &parser.Token{
        Span: 1:5-1:6,
        Type: 69,
        Value: "|",
    },
    &parser.Token{
        Span: 1:7-1:9,
        Type: 43,
        Value: "b",
    },
    &parser.Token{
        Span: 1:9-1:10,
        Type: 15,
        Value: ")",
    },
}
---

[TestParseLifetimeAnnotations/FnTypeAnnLifetimeParams - 1]
&ast.DeclStmt{
    Decl: &ast.VarDecl{
        Pattern: &ast.IdentPat{
            Name: "f",
            span: 1:5-1:6,
        },
        TypeAnn: &ast.FuncTypeAnn{
            LifetimeParams: []*ast.LifetimeParam{
                &ast.LifetimeParam{
                    Name: "a",
                    span: 1:11-1:13,
                },
            },
            Params: []*ast.Param{
                &ast.Param{
                    Pattern: &ast.IdentPat{
                        Name: "p",
                        span: 1:15-1:16,
                    },
                    TypeAnn: &ast.TypeRefTypeAnn{
                        Name: &ast.Ident{
                            Name: "Point",
                            span: 1:21-1:26,
                        },
                        Lifetime: &ast.LifetimeAnn{
                            Name: "a",
                            span: 1:18-1:20,
                        },
                        span: 1:21-1:26,
                    },
                },
            },
            Return: &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "Point",
                    span: 1:34-1:39,
                },
                Lifetime: &ast.LifetimeAnn{
                    Name: "a",
                    span: 1:31-1:33,
                },
                span: 1:34-1:39,
            },
            span: 1:8-1:39,
        },
        Init: &ast.IdentExpr{
            Name: "ref",
            span: 1:42-1:45,
        },
        span: 1:1-1:45,
    },
    span: 1:1-1:45,
}
---

[TestParseLifetimeAnnotations/FnLifetimeAndTypeParams - 1]
&ast.DeclStmt{
    Decl: &ast.FuncDecl{
        Name: &ast.Ident{
            Name: "identity",
            span: 1:4-1:12,
        },
        FuncSig: ast.FuncSig{
            LifetimeParams: []*ast.LifetimeParam{
                &ast.LifetimeParam{
                    Name: "a",
                    span: 1:13-1:15,
                },
            },
            TypeParams: []*ast.TypeParam{
                &ast.TypeParam{
                    Name: "T",
                },
            },
            Params: []*ast.Param{
                &ast.Param{
                    Pattern: &ast.IdentPat{
                        Name: "p",
                        span: 1:20-1:21,
                    },
                    TypeAnn: &ast.MutableTypeAnn{
                        Target: &ast.TypeRefTypeAnn{
                            Name: &ast.Ident{
                                Name: "T",
                                span: 1:30-1:31,
                            },
                            Lifetime: &ast.LifetimeAnn{
                                Name: "a",
                                span: 1:27-1:29,
                            },
                            span: 1:30-1:31,
                        },
                        span: 1:30-1:31,
                    },
                },
            },
            Return: &ast.MutableTypeAnn{
                Target: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "T",
                        span: 1:43-1:44,
                    },
                    Lifetime: &ast.LifetimeAnn{
                        Name: "a",
                        span: 1:40-1:42,
                    },
                    span: 1:43-1:44,
                },
                span: 1:43-1:44,
            },
        },
        Body: &ast.Block{
            Stmts: []ast.Stmt{
                &ast.ReturnStmt{
                    Expr: &ast.IdentExpr{
                        Name: "p",
                        span: 1:54-1:55,
                    },
                    span: 1:47-1:55,
                },
            },
            Span: 1:45-1:57,
        },
        span: 1:1-1:57,
    },
    span: 1:1-1:57,
}
---

[TestParseLifetimeAnnotations/FnImmutableLifetimeOnRef - 1]
&ast.DeclStmt{
    Decl: &ast.FuncDecl{
        Name: &ast.Ident{
            Name: "ref",
            span: 1:4-1:7,
        },
        FuncSig: ast.FuncSig{
            LifetimeParams: []*ast.LifetimeParam{
                &ast.LifetimeParam{
                    Name: "a",
                    span: 1:8-1:10,
                },
            },
            Params: []*ast.Param{
                &ast.Param{
                    Pattern: &ast.IdentPat{
                        Name: "p",
                        span: 1:12-1:13,
                    },
                    TypeAnn: &ast.TypeRefTypeAnn{
                        Name: &ast.Ident{
                            Name: "Point",
                            span: 1:18-1:23,
                        },
                        Lifetime: &ast.LifetimeAnn{
                            Name: "a",
                            span: 1:15-1:17,
                        },
                        span: 1:18-1:23,
                    },
                },
            },
            Return: &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "Point",
                    span: 1:31-1:36,
                },
                Lifetime: &ast.LifetimeAnn{
                    Name: "a",
                    span: 1:28-1:30,
                },
                span: 1:31-1:36,
            },
        },
        Body: &ast.Block{
            Stmts: []ast.Stmt{
                &ast.ReturnStmt{
                    Expr: &ast.IdentExpr{
                        Name: "p",
                        span: 1:46-1:47,
                    },
                    span: 1:39-1:47,
                },
            },
            Span: 1:37-1:49,
        },
        span: 1:1-1:49,
    },
    span: 1:1-1:49,
}
---

[TestParseLifetimeAnnotations/FnTwoLifetimeParams - 1]
&ast.DeclStmt{
    Decl: &ast.FuncDecl{
        Name: &ast.Ident{
            Name: "first",
            span: 1:4-1:9,
        },
        FuncSig: ast.FuncSig{
            LifetimeParams: []*ast.LifetimeParam{
                &ast.LifetimeParam{
                    Name: "a",
                    span: 1:10-1:12,
                },
                &ast.LifetimeParam{
                    Name: "b",
                    span: 1:14-1:16,
                },
            },
            Params: []*ast.Param{
                &ast.Param{
                    Pattern: &ast.IdentPat{
                        Name: "a",
                        span: 1:18-1:19,
                    },
                    TypeAnn: &ast.MutableTypeAnn{
                        Target: &ast.TypeRefTypeAnn{
                            Name: &ast.Ident{
                                Name: "Point",
                                span: 1:28-1:33,
                            },
                            Lifetime: &ast.LifetimeAnn{
                                Name: "a",
                                span: 1:25-1:27,
                            },
                            span: 1:28-1:33,
                        },
                        span: 1:28-1:33,
                    },
                },
                &ast.Param{
                    Pattern: &ast.IdentPat{
                        Name: "b",
                        span: 1:35-1:36,
                    },
                    TypeAnn: &ast.MutableTypeAnn{
                        Target: &ast.TypeRefTypeAnn{
                            Name: &ast.Ident{
                                Name: "Point",
                                span: 1:45-1:50,
                            },
                            Lifetime: &ast.LifetimeAnn{
                                Name: "b",
                                span: 1:42-1:44,
                            },
                            span: 1:45-1:50,
                        },
                        span: 1:45-1:50,
                    },
                },
            },
            Return: &ast.MutableTypeAnn{
                Target: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "Point",
                        span: 1:62-1:67,
                    },
                    Lifetime: &ast.LifetimeAnn{
                        Name: "a",
                        span: 1:59-1:61,
                    },
                    span: 1:62-1:67,
                },
                span: 1:62-1:67,
            },
        },
        Body: &ast.Block{
            Stmts: []ast.Stmt{
                &ast.ReturnStmt{
                    Expr: &ast.IdentExpr{
                        Name: "a",
                        span: 1:77-1:78,
                    },
                    span: 1:70-1:78,
                },
            },
            Span: 1:68-1:80,
        },
        span: 1:1-1:80,
    },
    span: 1:1-1:80,
}
---

[TestParseLifetimeAnnotations/FnSingleLifetimeParam - 1]
&ast.DeclStmt{
    Decl: &ast.FuncDecl{
        Name: &ast.Ident{
            Name: "identity",
            span: 1:4-1:12,
        },
        FuncSig: ast.FuncSig{
            LifetimeParams: []*ast.LifetimeParam{
                &ast.LifetimeParam{
                    Name: "a",
                    span: 1:13-1:15,
                },
            },
            Params: []*ast.Param{
                &ast.Param{
                    Pattern: &ast.IdentPat{
                        Name: "p",
                        span: 1:17-1:18,
                    },
                    TypeAnn: &ast.MutableTypeAnn{
                        Target: &ast.TypeRefTypeAnn{
                            Name: &ast.Ident{
                                Name: "Point",
                                span: 1:27-1:32,
                            },
                            Lifetime: &ast.LifetimeAnn{
                                Name: "a",
                                span: 1:24-1:26,
                            },
                            span: 1:27-1:32,
                        },
                        span: 1:27-1:32,
                    },
                },
            },
            Return: &ast.MutableTypeAnn{
                Target: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "Point",
                        span: 1:44-1:49,
                    },
                    Lifetime: &ast.LifetimeAnn{
                        Name: "a",
                        span: 1:41-1:43,
                    },
                    span: 1:44-1:49,
                },
                span: 1:44-1:49,
            },
        },
        Body: &ast.Block{
            Stmts: []ast.Stmt{
                &ast.ReturnStmt{
                    Expr: &ast.IdentExpr{
                        Name: "p",
                        span: 1:59-1:60,
                    },
                    span: 1:52-1:60,
                },
            },
            Span: 1:50-1:62,
        },
        span: 1:1-1:62,
    },
    span: 1:1-1:62,
}
---

[TestParseLifetimeAnnotations/InterfaceMethodLifetimeParam - 1]
&ast.DeclStmt{
    Decl: &ast.InterfaceDecl{
        Name: &ast.Ident{
            Name: "Borrower",
            span: 1:11-1:19,
        },
        TypeAnn: &ast.ObjectTypeAnn{
            Elems: []ast.ObjTypeAnnElem{
                &ast.MethodTypeAnn{
                    Name: &ast.IdentExpr{
                        Name: "borrow",
                        span: 1:22-1:28,
                    },
                    Fn: &ast.FuncTypeAnn{
                        LifetimeParams: []*ast.LifetimeParam{
                            &ast.LifetimeParam{
                                Name: "a",
                                span: 1:29-1:31,
                            },
                        },
                        Params: []*ast.Param{
                            &ast.Param{
                                Pattern: &ast.IdentPat{
                                    Name: "p",
                                    span: 1:39-1:40,
                                },
                                TypeAnn: &ast.TypeRefTypeAnn{
                                    Name: &ast.Ident{
                                        Name: "Point",
                                        span: 1:45-1:50,
                                    },
                                    Lifetime: &ast.LifetimeAnn{
                                        Name: "a",
                                        span: 1:42-1:44,
                                    },
                                    span: 1:45-1:50,
                                },
                            },
                        },
                        Return: &ast.TypeRefTypeAnn{
                            Name: &ast.Ident{
                                Name: "Point",
                                span: 1:58-1:63,
                            },
                            Lifetime: &ast.LifetimeAnn{
                                Name: "a",
                                span: 1:55-1:57,
                            },
                            span: 1:58-1:63,
                        },
                        span: 1:32-1:63,
                    },
                    Receiver: &ast.MethodReceiver{
                        Span_: 1:33-1:37,
                    },
                },
            },
            span: 1:20-1:65,
        },
        span: 1:1-1:65,
    },
    span: 1:1-1:65,
}
---

[TestParseLifetimeAnnotations/ClassMethodLifetimeParam - 1]
&ast.DeclStmt{
    Decl: &ast.ClassDecl{
        Name: &ast.Ident{
            Name: "Box",
            span: 1:7-1:10,
        },
        Body: []ast.ClassElem{
            &ast.MethodElem{
                Name: &ast.IdentExpr{
                    Name: "borrow",
                    span: 1:13-1:19,
                },
                Fn: &ast.FuncExpr{
                    FuncSig: ast.FuncSig{
                        LifetimeParams: []*ast.LifetimeParam{
                            &ast.LifetimeParam{
                                Name: "a",
                                span: 1:20-1:22,
                            },
                        },
                        Params: []*ast.Param{
                            &ast.Param{
                                Pattern: &ast.IdentPat{
                                    Name: "p",
                                    span: 1:30-1:31,
                                },
                                TypeAnn: &ast.TypeRefTypeAnn{
                                    Name: &ast.Ident{
                                        Name: "Point",
                                        span: 1:36-1:41,
                                    },
                                    Lifetime: &ast.LifetimeAnn{
                                        Name: "a",
                                        span: 1:33-1:35,
                                    },
                                    span: 1:36-1:41,
                                },
                            },
                        },
                        Return: &ast.TypeRefTypeAnn{
                            Name: &ast.Ident{
                                Name: "Point",
                                span: 1:49-1:54,
                            },
                            Lifetime: &ast.LifetimeAnn{
                                Name: "a",
                                span: 1:46-1:48,
                            },
                            span: 1:49-1:54,
                        },
                    },
                    Body: &ast.Block{
                        Stmts: []ast.Stmt{
                            &ast.ReturnStmt{
                                Expr: &ast.IdentExpr{
                                    Name: "p",
                                    span: 1:64-1:65,
                                },
                                span: 1:57-1:65,
                            },
                        },
                        Span: 1:55-1:67,
                    },
                    span: 1:13-1:67,
                },
                Receiver: &ast.MethodReceiver{
                    Span_: 1:24-1:28,
                },
                Span_: 1:13-1:67,
            },
        },
        span: 1:1-1:69,
    },
    span: 1:1-1:69,
}
---

[TestParseLifetimeAnnotations/ClassWithLifetimeParam - 1]
&ast.DeclStmt{
    Decl: &ast.ClassDecl{
        Name: &ast.Ident{
            Name: "Container",
            span: 1:7-1:16,
        },
        LifetimeParams: []*ast.LifetimeParam{
            &ast.LifetimeParam{
                Name: "a",
                span: 1:17-1:19,
            },
        },
        Body: []ast.ClassElem{
            &ast.FieldElem{
                Name: &ast.IdentExpr{
                    Name: "p",
                    span: 1:23-1:24,
                },
                Type: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "Point",
                        span: 1:29-1:34,
                    },
                    Lifetime: &ast.LifetimeAnn{
                        Name: "a",
                        span: 1:26-1:28,
                    },
                    span: 1:29-1:34,
                },
                Span_: 1:23-1:34,
            },
        },
        span: 1:1-1:36,
    },
    span: 1:1-1:36,
}
---

[TestParseLifetimeAnnotations/InterfaceWithLifetimeParam - 1]
&ast.DeclStmt{
    Decl: &ast.InterfaceDecl{
        Name: &ast.Ident{
            Name: "Holder",
            span: 1:11-1:17,
        },
        LifetimeParams: []*ast.LifetimeParam{
            &ast.LifetimeParam{
                Name: "a",
                span: 1:18-1:20,
            },
        },
        TypeAnn: &ast.ObjectTypeAnn{
            Elems: []ast.ObjTypeAnnElem{
                &ast.PropertyTypeAnn{
                    Name: &ast.IdentExpr{
                        Name: "p",
                        span: 1:24-1:25,
                    },
                    Value: &ast.TypeRefTypeAnn{
                        Name: &ast.Ident{
                            Name: "Point",
                            span: 1:30-1:35,
                        },
                        Lifetime: &ast.LifetimeAnn{
                            Name: "a",
                            span: 1:27-1:29,
                        },
                        span: 1:30-1:35,
                    },
                },
            },
            span: 1:22-1:37,
        },
        span: 1:1-1:37,
    },
    span: 1:1-1:37,
}
---

[TestParseLifetimeAnnotations/TypeRefStaticLifetimeArg - 1]
&ast.DeclStmt{
    Decl: &ast.VarDecl{
        Pattern: &ast.IdentPat{
            Name: "v",
            span: 1:5-1:6,
        },
        TypeAnn: &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "Container",
                span: 1:8-1:17,
            },
            LifetimeArgs: []ast.LifetimeAnnNode{
                &ast.LifetimeAnn{
                    Name: "static",
                    span: 1:18-1:25,
                },
            },
            span: 1:8-1:26,
        },
        Init: &ast.IdentExpr{
            Name: "ref",
            span: 1:29-1:32,
        },
        span: 1:1-1:32,
    },
    span: 1:1-1:32,
}
---

[TestParseLifetimeAnnotations/ClassImplementsLifetimeArg - 1]
&ast.DeclStmt{
    Decl: &ast.ClassDecl{
        Name: &ast.Ident{
            Name: "Forwarder",
            span: 1:7-1:16,
        },
        LifetimeParams: []*ast.LifetimeParam{
            &ast.LifetimeParam{
                Name: "a",
                span: 1:17-1:19,
            },
        },
        Implements: []*ast.TypeRefTypeAnn{
            &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "View",
                    span: 1:32-1:36,
                },
                LifetimeArgs: []ast.LifetimeAnnNode{
                    &ast.LifetimeAnn{
                        Name: "a",
                        span: 1:37-1:39,
                    },
                },
                span: 1:32-1:40,
            },
        },
        Body: []ast.ClassElem{
            &ast.FieldElem{
                Name: &ast.IdentExpr{
                    Name: "value",
                    span: 1:43-1:48,
                },
                Type: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "Point",
                        span: 1:53-1:58,
                    },
                    Lifetime: &ast.LifetimeAnn{
                        Name: "a",
                        span: 1:50-1:52,
                    },
                    span: 1:53-1:58,
                },
                Span_: 1:43-1:58,
            },
        },
        span: 1:1-1:60,
    },
    span: 1:1-1:60,
}
---

[TestParseLifetimeAnnotations/TypeRefBareLifetimeArg - 1]
&ast.DeclStmt{
    Decl: &ast.VarDecl{
        Pattern: &ast.IdentPat{
            Name: "v",
            span: 1:5-1:6,
        },
        TypeAnn: &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "View",
                span: 1:8-1:12,
            },
            LifetimeArgs: []ast.LifetimeAnnNode{
                &ast.LifetimeAnn{
                    Name: "a",
                    span: 1:13-1:15,
                },
            },
            span: 1:8-1:16,
        },
        Init: &ast.IdentExpr{
            Name: "ref",
            span: 1:19-1:22,
        },
        span: 1:1-1:22,
    },
    span: 1:1-1:22,
}
---

[TestParseLifetimeAnnotations/TypeRefMixedLifetimeAndTypeArgs - 1]
&ast.DeclStmt{
    Decl: &ast.VarDecl{
        Pattern: &ast.IdentPat{
            Name: "v",
            span: 1:5-1:6,
        },
        TypeAnn: &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "Pair",
                span: 1:8-1:12,
            },
            TypeArgs: []ast.TypeAnn{
                &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "T",
                        span: 1:17-1:18,
                    },
                    span: 1:17-1:18,
                },
            },
            LifetimeArgs: []ast.LifetimeAnnNode{
                &ast.LifetimeAnn{
                    Name: "a",
                    span: 1:13-1:15,
                },
            },
            span: 1:8-1:19,
        },
        Init: &ast.IdentExpr{
            Name: "ref",
            span: 1:22-1:25,
        },
        span: 1:1-1:25,
    },
    span: 1:1-1:25,
}
---

[TestParseLifetimeAnnotations/FnReturnsTypeRefWithLifetimeArg - 1]
&ast.DeclStmt{
    Decl: &ast.FuncDecl{
        Name: &ast.Ident{
            Name: "borrow",
            span: 1:4-1:10,
        },
        FuncSig: ast.FuncSig{
            LifetimeParams: []*ast.LifetimeParam{
                &ast.LifetimeParam{
                    Name: "a",
                    span: 1:11-1:13,
                },
            },
            Params: []*ast.Param{
                &ast.Param{
                    Pattern: &ast.IdentPat{
                        Name: "c",
                        span: 1:15-1:16,
                    },
                    TypeAnn: &ast.TypeRefTypeAnn{
                        Name: &ast.Ident{
                            Name: "Container",
                            span: 1:18-1:27,
                        },
                        LifetimeArgs: []ast.LifetimeAnnNode{
                            &ast.LifetimeAnn{
                                Name: "a",
                                span: 1:28-1:30,
                            },
                        },
                        span: 1:18-1:31,
                    },
                },
            },
            Return: &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "Point",
                    span: 1:39-1:44,
                },
                Lifetime: &ast.LifetimeAnn{
                    Name: "a",
                    span: 1:36-1:38,
                },
                span: 1:39-1:44,
            },
        },
        Body: &ast.Block{
            Stmts: []ast.Stmt{
                &ast.ReturnStmt{
                    Expr: &ast.MemberExpr{
                        Object: &ast.IdentExpr{
                            Name: "c",
                            span: 1:54-1:55,
                        },
                        Prop: &ast.Ident{
                            Name: "p",
                            span: 1:56-1:57,
                        },
                        span: 1:54-1:57,
                    },
                    span: 1:47-1:57,
                },
            },
            Span: 1:45-1:59,
        },
        span: 1:1-1:59,
    },
    span: 1:1-1:59,
}
---

[TestParseLifetimeAnnotations/ClassMethodSelfLifetime - 1]
&ast.DeclStmt{
    Decl: &ast.ClassDecl{
        Name: &ast.Ident{
            Name: "View",
            span: 1:7-1:11,
        },
        Body: []ast.ClassElem{
            &ast.MethodElem{
                Name: &ast.IdentExpr{
                    Name: "peek",
                    span: 1:14-1:18,
                },
                Fn: &ast.FuncExpr{
                    FuncSig: ast.FuncSig{
                        LifetimeParams: []*ast.LifetimeParam{
                            &ast.LifetimeParam{
                                Name: "a",
                                span: 1:19-1:21,
                            },
                        },
                        Return: &ast.TypeRefTypeAnn{
                            Name: &ast.Ident{
                                Name: "Point",
                                span: 1:38-1:43,
                            },
                            Lifetime: &ast.LifetimeAnn{
                                Name: "a",
                                span: 1:35-1:37,
                            },
                            span: 1:38-1:43,
                        },
                    },
                    Body: &ast.Block{
                        Stmts: []ast.Stmt{
                            &ast.ReturnStmt{
                                Expr: &ast.MemberExpr{
                                    Object: &ast.IdentExpr{
                                        Name: "self",
                                        span: 1:53-1:57,
                                    },
                                    Prop: &ast.Ident{
                                        Name: "p",
                                        span: 1:58-1:59,
                                    },
                                    span: 1:53-1:59,
                                },
                                span: 1:46-1:59,
                            },
                        },
                        Span: 1:44-1:61,
                    },
                    span: 1:14-1:61,
                },
                Receiver: &ast.MethodReceiver{
                    Lifetime: &ast.LifetimeAnn{
                        Name: "a",
                        span: 1:23-1:25,
                    },
                    Span_: 1:23-1:30,
                },
                Span_: 1:14-1:61,
            },
        },
        span: 1:1-1:63,
    },
    span: 1:1-1:63,
}
---

[TestParseLifetimeAnnotations/InterfaceMethodSelfLifetime - 1]
&ast.DeclStmt{
    Decl: &ast.InterfaceDecl{
        Name: &ast.Ident{
            Name: "Viewer",
            span: 1:11-1:17,
        },
        TypeAnn: &ast.ObjectTypeAnn{
            Elems: []ast.ObjTypeAnnElem{
                &ast.MethodTypeAnn{
                    Name: &ast.IdentExpr{
                        Name: "peek",
                        span: 1:20-1:24,
                    },
                    Fn: &ast.FuncTypeAnn{
                        LifetimeParams: []*ast.LifetimeParam{
                            &ast.LifetimeParam{
                                Name: "a",
                                span: 1:25-1:27,
                            },
                        },
                        Return: &ast.TypeRefTypeAnn{
                            Name: &ast.Ident{
                                Name: "Point",
                                span: 1:44-1:49,
                            },
                            Lifetime: &ast.LifetimeAnn{
                                Name: "a",
                                span: 1:41-1:43,
                            },
                            span: 1:44-1:49,
                        },
                        span: 1:28-1:49,
                    },
                    Receiver: &ast.MethodReceiver{
                        Lifetime: &ast.LifetimeAnn{
                            Name: "a",
                            span: 1:29-1:31,
                        },
                        Span_: 1:29-1:36,
                    },
                },
            },
            span: 1:18-1:51,
        },
        span: 1:1-1:51,
    },
    span: 1:1-1:51,
}
---

[TestParseLifetimeAnnotations/InterfaceMethodMutSelfLifetime - 1]
&ast.DeclStmt{
    Decl: &ast.InterfaceDecl{
        Name: &ast.Ident{
            Name: "Mutator",
            span: 1:11-1:18,
        },
        TypeAnn: &ast.ObjectTypeAnn{
            Elems: []ast.ObjTypeAnnElem{
                &ast.MethodTypeAnn{
                    Name: &ast.IdentExpr{
                        Name: "setItem",
                        span: 1:21-1:28,
                    },
                    Fn: &ast.FuncTypeAnn{
                        LifetimeParams: []*ast.LifetimeParam{
                            &ast.LifetimeParam{
                                Name: "a",
                                span: 1:29-1:31,
                            },
                        },
                        Params: []*ast.Param{
                            &ast.Param{
                                Pattern: &ast.IdentPat{
                                    Name: "p",
                                    span: 1:46-1:47,
                                },
                                TypeAnn: &ast.MutableTypeAnn{
                                    Target: &ast.TypeRefTypeAnn{
                                        Name: &ast.Ident{
                                            Name: "Point",
                                            span: 1:56-1:61,
                                        },
                                        Lifetime: &ast.LifetimeAnn{
                                            Name: "a",
                                            span: 1:53-1:55,
                                        },
                                        span: 1:56-1:61,
                                    },
                                    span: 1:56-1:61,
                                },
                            },
                        },
                        Return: &ast.VoidTypeAnn{
                            span: 1:66-1:70,
                        },
                        span: 1:32-1:70,
                    },
                    Receiver: &ast.MethodReceiver{
                        Mut: true,
                        Lifetime: &ast.LifetimeAnn{
                            Name: "a",
                            span: 1:37-1:39,
                        },
                        Span_: 1:33-1:44,
                    },
                },
            },
            span: 1:19-1:72,
        },
        span: 1:1-1:72,
    },
    span: 1:1-1:72,
}
---

[TestParseLifetimeAnnotations/ClassMethodMutSelfLifetime - 1]
&ast.DeclStmt{
    Decl: &ast.ClassDecl{
        Name: &ast.Ident{
            Name: "Container",
            span: 1:7-1:16,
        },
        Body: []ast.ClassElem{
            &ast.MethodElem{
                Name: &ast.IdentExpr{
                    Name: "setItem",
                    span: 1:19-1:26,
                },
                Fn: &ast.FuncExpr{
                    FuncSig: ast.FuncSig{
                        LifetimeParams: []*ast.LifetimeParam{
                            &ast.LifetimeParam{
                                Name: "a",
                                span: 1:27-1:29,
                            },
                        },
                        Params: []*ast.Param{
                            &ast.Param{
                                Pattern: &ast.IdentPat{
                                    Name: "p",
                                    span: 1:44-1:45,
                                },
                                TypeAnn: &ast.MutableTypeAnn{
                                    Target: &ast.TypeRefTypeAnn{
                                        Name: &ast.Ident{
                                            Name: "Point",
                                            span: 1:54-1:59,
                                        },
                                        Lifetime: &ast.LifetimeAnn{
                                            Name: "a",
                                            span: 1:51-1:53,
                                        },
                                        span: 1:54-1:59,
                                    },
                                    span: 1:54-1:59,
                                },
                            },
                        },
                        Return: &ast.VoidTypeAnn{
                            span: 1:64-1:68,
                        },
                    },
                    Body: &ast.Block{
                        Span: 1:69-1:72,
                    },
                    span: 1:19-1:72,
                },
                Receiver: &ast.MethodReceiver{
                    Mut: true,
                    Lifetime: &ast.LifetimeAnn{
                        Name: "a",
                        span: 1:35-1:37,
                    },
                    Span_: 1:31-1:42,
                },
                Span_: 1:19-1:72,
            },
        },
        span: 1:1-1:74,
    },
    span: 1:1-1:74,
}
---

[TestParseLifetimeAnnotations/FnLifetimeParamMultiBound - 1]
&ast.DeclStmt{
    Decl: &ast.FuncDecl{
        Name: &ast.Ident{
            Name: "pick",
            span: 1:4-1:8,
        },
        FuncSig: ast.FuncSig{
            LifetimeParams: []*ast.LifetimeParam{
                &ast.LifetimeParam{
                    Name: "a",
                    Bounds: []*ast.LifetimeAnn{
                        &ast.LifetimeAnn{
                            Name: "b",
                            span: 1:13-1:15,
                        },
                        &ast.LifetimeAnn{
                            Name: "c",
                            span: 1:18-1:20,
                        },
                    },
                    span: 1:9-1:20,
                },
                &ast.LifetimeParam{
                    Name: "b",
                    span: 1:22-1:24,
                },
                &ast.LifetimeParam{
                    Name: "c",
                    span: 1:26-1:28,
                },
            },
            Params: []*ast.Param{
                &ast.Param{
                    Pattern: &ast.IdentPat{
                        Name: "a",
                        span: 1:30-1:31,
                    },
                    TypeAnn: &ast.MutableTypeAnn{
                        Target: &ast.TypeRefTypeAnn{
                            Name: &ast.Ident{
                                Name: "Point",
                                span: 1:40-1:45,
                            },
                            Lifetime: &ast.LifetimeAnn{
                                Name: "a",
                                span: 1:37-1:39,
                            },
                            span: 1:40-1:45,
                        },
                        span: 1:40-1:45,
                    },
                },
            },
            Return: &ast.MutableTypeAnn{
                Target: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "Point",
                        span: 1:57-1:62,
                    },
                    Lifetime: &ast.LifetimeAnn{
                        Name: "a",
                        span: 1:54-1:56,
                    },
                    span: 1:57-1:62,
                },
                span: 1:57-1:62,
            },
        },
        Body: &ast.Block{
            Stmts: []ast.Stmt{
                &ast.ReturnStmt{
                    Expr: &ast.IdentExpr{
                        Name: "a",
                        span: 1:72-1:73,
                    },
                    span: 1:65-1:73,
                },
            },
            Span: 1:63-1:75,
        },
        span: 1:1-1:75,
    },
    span: 1:1-1:75,
}
---

[TestParseLifetimeAnnotations/FnLifetimeParamSingleBound - 1]
&ast.DeclStmt{
    Decl: &ast.FuncDecl{
        Name: &ast.Ident{
            Name: "pick",
            span: 1:4-1:8,
        },
        FuncSig: ast.FuncSig{
            LifetimeParams: []*ast.LifetimeParam{
                &ast.LifetimeParam{
                    Name: "a",
                    span: 1:9-1:11,
                },
                &ast.LifetimeParam{
                    Name: "b",
                    Bounds: []*ast.LifetimeAnn{
                        &ast.LifetimeAnn{
                            Name: "a",
                            span: 1:17-1:19,
                        },
                    },
                    span: 1:13-1:19,
                },
            },
            Params: []*ast.Param{
                &ast.Param{
                    Pattern: &ast.IdentPat{
                        Name: "a",
                        span: 1:21-1:22,
                    },
                    TypeAnn: &ast.MutableTypeAnn{
                        Target: &ast.TypeRefTypeAnn{
                            Name: &ast.Ident{
                                Name: "Point",
                                span: 1:31-1:36,
                            },
                            Lifetime: &ast.LifetimeAnn{
                                Name: "a",
                                span: 1:28-1:30,
                            },
                            span: 1:31-1:36,
                        },
                        span: 1:31-1:36,
                    },
                },
                &ast.Param{
                    Pattern: &ast.IdentPat{
                        Name: "b",
                        span: 1:38-1:39,
                    },
                    TypeAnn: &ast.MutableTypeAnn{
                        Target: &ast.TypeRefTypeAnn{
                            Name: &ast.Ident{
                                Name: "Point",
                                span: 1:48-1:53,
                            },
                            Lifetime: &ast.LifetimeAnn{
                                Name: "b",
                                span: 1:45-1:47,
                            },
                            span: 1:48-1:53,
                        },
                        span: 1:48-1:53,
                    },
                },
            },
            Return: &ast.MutableTypeAnn{
                Target: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "Point",
                        span: 1:65-1:70,
                    },
                    Lifetime: &ast.LifetimeAnn{
                        Name: "b",
                        span: 1:62-1:64,
                    },
                    span: 1:65-1:70,
                },
                span: 1:65-1:70,
            },
        },
        Body: &ast.Block{
            Stmts: []ast.Stmt{
                &ast.ReturnStmt{
                    Expr: &ast.IdentExpr{
                        Name: "b",
                        span: 1:80-1:81,
                    },
                    span: 1:73-1:81,
                },
            },
            Span: 1:71-1:83,
        },
        span: 1:1-1:83,
    },
    span: 1:1-1:83,
}
---

[TestParseLifetimeAnnotations/FnTypeAnnLifetimeParamBound - 1]
&ast.DeclStmt{
    Decl: &ast.VarDecl{
        Pattern: &ast.IdentPat{
            Name: "f",
            span: 1:5-1:6,
        },
        TypeAnn: &ast.FuncTypeAnn{
            LifetimeParams: []*ast.LifetimeParam{
                &ast.LifetimeParam{
                    Name: "a",
                    span: 1:11-1:13,
                },
                &ast.LifetimeParam{
                    Name: "b",
                    Bounds: []*ast.LifetimeAnn{
                        &ast.LifetimeAnn{
                            Name: "a",
                            span: 1:19-1:21,
                        },
                    },
                    span: 1:15-1:21,
                },
            },
            Params: []*ast.Param{
                &ast.Param{
                    Pattern: &ast.IdentPat{
                        Name: "a",
                        span: 1:23-1:24,
                    },
                    TypeAnn: &ast.TypeRefTypeAnn{
                        Name: &ast.Ident{
                            Name: "Point",
                            span: 1:29-1:34,
                        },
                        Lifetime: &ast.LifetimeAnn{
                            Name: "a",
                            span: 1:26-1:28,
                        },
                        span: 1:29-1:34,
                    },
                },
                &ast.Param{
                    Pattern: &ast.IdentPat{
                        Name: "b",
                        span: 1:36-1:37,
                    },
                    TypeAnn: &ast.TypeRefTypeAnn{
                        Name: &ast.Ident{
                            Name: "Point",
                            span: 1:42-1:47,
                        },
                        Lifetime: &ast.LifetimeAnn{
                            Name: "b",
                            span: 1:39-1:41,
                        },
                        span: 1:42-1:47,
                    },
                },
            },
            Return: &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "Point",
                    span: 1:55-1:60,
                },
                Lifetime: &ast.LifetimeAnn{
                    Name: "b",
                    span: 1:52-1:54,
                },
                span: 1:55-1:60,
            },
            span: 1:8-1:60,
        },
        Init: &ast.IdentExpr{
            Name: "pick",
            span: 1:63-1:67,
        },
        span: 1:1-1:67,
    },
    span: 1:1-1:67,
}
---

[TestParseLifetimeAnnotations/FnLifetimeParamStaticBound - 1]
&ast.DeclStmt{
    Decl: &ast.FuncDecl{
        Name: &ast.Ident{
            Name: "keep",
            span: 1:4-1:8,
        },
        FuncSig: ast.FuncSig{
            LifetimeParams: []*ast.LifetimeParam{
                &ast.LifetimeParam{
                    Name: "a",
                    Bounds: []*ast.LifetimeAnn{
                        &ast.LifetimeAnn{
                            Name: "static",
                            span: 1:13-1:20,
                        },
                    },
                    span: 1:9-1:20,
                },
            },
            Params: []*ast.Param{
                &ast.Param{
                    Pattern: &ast.IdentPat{
                        Name: "p",
                        span: 1:22-1:23,
                    },
                    TypeAnn: &ast.MutableTypeAnn{
                        Target: &ast.TypeRefTypeAnn{
                            Name: &ast.Ident{
                                Name: "Point",
                                span: 1:32-1:37,
                            },
                            Lifetime: &ast.LifetimeAnn{
                                Name: "a",
                                span: 1:29-1:31,
                            },
                            span: 1:32-1:37,
                        },
                        span: 1:32-1:37,
                    },
                },
            },
            Return: &ast.MutableTypeAnn{
                Target: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "Point",
                        span: 1:49-1:54,
                    },
                    Lifetime: &ast.LifetimeAnn{
                        Name: "a",
                        span: 1:46-1:48,
                    },
                    span: 1:49-1:54,
                },
                span: 1:49-1:54,
            },
        },
        Body: &ast.Block{
            Stmts: []ast.Stmt{
                &ast.ReturnStmt{
                    Expr: &ast.IdentExpr{
                        Name: "p",
                        span: 1:64-1:65,
                    },
                    span: 1:57-1:65,
                },
            },
            Span: 1:55-1:67,
        },
        span: 1:1-1:67,
    },
    span: 1:1-1:67,
}
---

[TestParseLifetimeAnnotations/ParenLifetimePrefixTypeArg - 1]
&ast.DeclStmt{
    Decl: &ast.VarDecl{
        Pattern: &ast.IdentPat{
            Name: "v",
            span: 1:5-1:6,
        },
        TypeAnn: &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "View",
                span: 1:8-1:12,
            },
            TypeArgs: []ast.TypeAnn{
                &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "Point",
                        span: 1:17-1:22,
                    },
                    Lifetime: &ast.LifetimeAnn{
                        Name: "a",
                        span: 1:14-1:16,
                    },
                    span: 1:17-1:22,
                },
            },
            span: 1:8-1:24,
        },
        Init: &ast.IdentExpr{
            Name: "ref",
            span: 1:27-1:30,
        },
        span: 1:1-1:30,
    },
    span: 1:1-1:30,
}
---

[TestParseLifetimeAnnotations/ParenLifetimePrefixType - 1]
&ast.DeclStmt{
    Decl: &ast.VarDecl{
        Pattern: &ast.IdentPat{
            Name: "v",
            span: 1:5-1:6,
        },
        TypeAnn: &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "Point",
                span: 1:12-1:17,
            },
            Lifetime: &ast.LifetimeAnn{
                Name: "a",
                span: 1:9-1:11,
            },
            span: 1:12-1:17,
        },
        Init: &ast.IdentExpr{
            Name: "ref",
            span: 1:21-1:24,
        },
        span: 1:1-1:24,
    },
    span: 1:1-1:24,
}
---
